--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20456,7 +20456,7 @@ footer .footer-navbar .nav-item:last-child a {
 }
 
 .image-section-before-footer {
-  background-color: #fff; /* Adjust as needed */
+  background-color: #F8F9FA; /* Adjust as needed */
   text-align: center;
 }
 
